<resources>
    <string name="app_name">BZHD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>
    <string name="title_chapter_list">Chapter</string>
    <string name="title_chapter_detail">Chapter Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Gos.Sitema"><b><u>Гос. система безопасности</u></b></string>
    <string name="RSCS">РСЧС</string>
    <string name="GO">ГО</string>
    <string name="Zashita.ot.CS"><b><u>Защиста населения от ЧС</u></b></string>
    <string name="Priroda">Природного характера</string>
    <string name="Texnogen">Техногенного характера</string>
    <string name="Socium">Социального характера</string>
    <string name="OMP">Защита от ОМП</string>
    <string name="Soxran.zdorovya"><b><u>Сохранение здоровья и собственной безопасности</u></b></string>
    <string name="ZOG">ЗОЖ</string>
    <string name="LBez">Обеспечение личной безопасности в бытовой и производственной деят</string>
    <string name="Med">Основы медицинских знаний</string>
    <string name="Proverka"><b><u>Проверка знаний</u></b></string>
    <string name="test1">Тест по разделу 1</string>
    <string name="test2">Тест по разделу 2</string>
    <string name="test3">Тест по разделу 3</string>
    <string name="LectRSCS">
<b>Предупреждение и ликвидация чрезвычайных ситуаций</b>\n
Предупреждение и ликвидация чрезвычайных ситуаций остается актуальной задачей и сегодня.
Вопрос по организации спасения людей, сохранению их здоровья, снижению ущерба окружающей природной среде
и локализации зон чрезвычайных ситуаций природного и техногенного характера на правительственном уровне был решен в 1992 г.
Тогда было принято постановление № 261 «О создании Российской системы предупреждения и действий в чрезвычайных ситуациях (РСЧС)»
В декабре 1994 г. Был принят Федеральный закон «О защите населения и территории от чрезвычайных ситуаций природного и техногенного характера».
Закон определил общие для Российской Федерации правовые нормы в области защиты населения, земельного, водного и воздушного пространства в пределах страны,
а также объектов экономики,  социального назначения и окружающей природной среды  от чрезвычайных ситуаций природного и техногенного характера.
5 ноября 1995 г. Российская система предупреждения и действий в чрезвычайных ситуациях (РСЧС) была преобразована в Единую государственную систему предупреждения и ликвидации чрезвычайных ситуаций.
Единая государственная система предупреждения и ликвидации чрезвычайных ситуаций (РСЧС) – создана с целью объединения усилий органов государственного управления всех уровней,
        подчиненных им сил и средств для предупреждения и ликвидации чрезвычайных ситуаций.
Основные задачи:\n
- разработка и реализация правовых и экономических норм, связанных с обеспечением защиты населения и территории от ЧС;\n
- осуществление целевых и научно-технических программ, направленных на предупреждение ЧС и повышение устойчивости функционирования предприятий и организаций;\n
- обеспечение готовности к действиям органов управления, сил и средств, предназначенных для предупреждения и ликвидации ЧС;\n
- сбор, обработка, обмен и выдача информации в области защиты населения и территории от ЧС;\n
- подготовка населения к действиям при ЧС;\n
- прогнозирование и оценка социально-экономических последствий ЧС;\n
- создание резервов финансовых и материальных ресурсов для ликвидации ЧС;\n
- ликвидация ЧС;/n
- осуществление мероприятий по социальной защите населения, пострадавшего от ЧС;\n
- реализация прав и обязанностей населения в области защиты от ЧС, в том числе лиц, непосредственно участвующих в их ликвидации;\n
- международное сотрудничество в области защиты населения и территории от ЧС.\n
Режимы функционирования РСЧС:\n
   Повседневной деятельности – при нормальной производственно-промышленной, радиационной, химической, биологической(бактериологической), сейсмической и гидрометеорологической обстановке, при отсутствии эпидемии, эпизоотий, эпифитотий./n
   Повышенной готовности – при ухудшении перечисленной выше обстановки и при получении прогноза о возможности возникновения ЧС.\n
   Чрезвычайной ситуации – при возникновении и в ликвидации ЧС.

</string>
    <string name="LectGO">
    В Советском Союзе фундамент гражданской обороны – до 1961 г. она именовалась местной противовоздушной обороной (МПВО) – начал закладываться в первые же годы установления советской власти. Первые мероприятия МПВО были осуществлены в Петрограде в марте 1918 г. после первой воздушной бомбардировки города немецкой авиацией.
        К участию в мероприятиях МПВО в годы Гражданской войны привлекались жители ряда других крупных городов, когда возникала угроза воздушных налетов.
    Советское правительство начиная с 1925 г. издало ряд постановлений, направленных на создание и укрепление противовоздушной обороны страны.
        К началу Великой Отечественной войны была проделана большая работа по подготовке населения и городов угрожаемой приграничной зоны к противовоздушной обороне и противохимической защите.
    Гражданская оборона (ГО) – система мероприятий по подготовке и защите населения, материальных и культурных ценностей на территории Российской Федерации от опасностей, возникающих при ведении военных
        действий или вследствие этих действий (Закон РФ от 12 февраля 1998 г. № 28-ФЗ «О гражданской обороне»). Гражданская оборона России является составной частью общей системы государственных
        оборонных мероприятий, проводимых в мирное и военное время. Деятельность гражданской обороны направлена как на защиту от современных средств нападения противника, так и на проведение спасательных и
        неотложных аварийно-восстановительных работ на объектах и в очагах поражения при чрезвычайных ситуациях мирного и военного времени. Основные задачи, стоящие перед гражданской обороной, можно
        сформулировать следующим образом:\n
    1) обучение населения способам защиты от опасностей, возникающих при ведении военных действий или вследствие этих действий;\n
    2) оповещение населения об опасностях, возникающих при ведении военных действий или вследствие этих действий;\n
    3) эвакуация населения, материальных и культурных ценностей в безопасные районы;\n
    4) предоставление населению убежищ и средств индивидуальной защиты;\n
    5) проведение мероприятий по световой и другим видам маскировки;\n
    6) борьба с пожарами, возникающими при ведении военных действий или вследствие этих действий;\n
    7) восстановление и поддержание порядка в районах, пострадавших при ведении военных действий, срочное восстановление функционирования необходимых коммунальных служб в военное время;\n
    8) разработка и осуществление мер, направленных на сохранение объектов, существенно необходимых для устойчивого функционирования экономики и выживания населения в военное время.\n
    На каждом объекте должно быть разработано положение о ГО, в котором обозначаются задачи ГО объекта.\n
    Важной задачей штаба ГО является обучение и подготовка персонала к действиям в ЧС. Процесс обучения является многоуровневым. Он включает в себя вводный инструктаж, ознакомление с характеристиками и способами обращения с индивидуальными и коллективными средствами защиты, проведение учебных тревог и т. д.
</string>
    <string name="LectCSPrirodnogoXaraktera">
       Чрезвычайные ситуации природного происхождения угрожают
обитателям нашей пшанеты. Они могуг приносить ущерб, размер
которого зависит не только от интенсивности самих природных
катастроф, но и от уровня развития общества и его политического
устройства. Природные катастрофы страшны своей неожиданностью.
За короткий промежутокок времени они
опустошают территории, уничтожают жилища, имущество,
коммуникации и другие элементы инфраструктуры. За каждой крупной
катастрофой, словно лавина, следуют новые: голод, инфекции,
мародерство, нищета, бродяжничество. Исходя из причин
или условий возникновения, их делят на следующие группы:\n
1) Геологические;\n
2) Метеорологические;\n
3) Гидрологические;\n
4) Природные пожары;\n
5) Массовые заболевания;\n
6) Космические.\n
Несмотря на глубокие различия в характере событий, все природные
ЧС подчиняются некоторым общим закономерностям. Во-
первых, для каждого вида ЧС характерна определеннм пространственнaя
приуроченность. Во-вторых, чем выше интенсивность
(мощность) опасного природного явления, тем реже оно случается.
В-третьих, каждой ситyации природного характера предшествуют
некоторые специфические признаки, В-четвертых, при всей
неожиданности той или иной природной ЧС ее
проявление может быть предсказано. Наконец, в-пятых, во многих
случаях могуг быть предусмотрены пассивные и активные защитные
мероприятия от природных опасностей.
Говоря о природных ЧС, следует подчеркнуть роль антропогенного
влияния на их проявление. Известны многочисленные
факты, когда нарушение равновесия в природной среде в результате
деятельности человечества приводило к усилению опасных
воздействий. Так, согласно международной статистике, около 80 %
совроменных оползней связано с деятельностью человека. В результате
вырубок леса возрастает активность селей, увеличивается количество паводков.
В настоящее время масштабы использования природных ресурсов
существенно возросли. В результате стaли более ощутимо проявляться
черты глобального эколомческого кризиса. Природа как
бы мстит человеку за грубое вмешательство в ее существование.
Это обстоятельство нельзя не учитывать в производственно-хозяйственной
деятельности.
Соблюдение природного равновесия является важнейшим
профилактическим условием предотвращения природных катастроф,
снижения силы их воздействия, сокращения их числа.
Между природными катастрофами существует определенная
связь. В частности, выявлена тесная зависимость между землетрясениями
и цунами, тропическими циклонами и наводнениями.
Нередко традиционные катастрофы сопровождаются воздействиями,
связанными с деятельностью человека. Например, землетрясения
вызывают пожары, взрывы транспортируемого газа, возгорание
нефтескважин, прорывы плотин. Вулканические извержения
поражают пастбища, приводят к гибели скота, голоду. Паводок
вызывает загрязнение почвенных вод удобрениями и иными
химикатами, отравление колодцев, а также возрождение инфекций и
заболеваний.
Имеются и другие негативные последствия. Принимая защитные
меры против природных смхий, важно заботиться об ограничении
возможности возникновения вторичных катастроф, а при
появлении их признаков быть готовым к сдерживанию распространения
и ликвидации последствий.
Предпосылкой успешной защиты от природных ЧС является
изучение их причин и механизмов. Зная сущность процессов, можно их
предсказать. Своевременный и точный прогноз опасных явлний
является важнейшей предпосылкой эффективной защиты.
    </string>
</resources>