<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/Gos.Sitema">
        <menu>
            <item
                android:id="@+id/RSCS"
                android:title="@string/RSCS" />
            <item
                android:id="@+id/GO"
                android:title="@string/GO" />

        </menu>
    </item>
    <item android:title="@string/Zashita.ot.CS">
        <menu>
            <item
                android:id="@+id/Priroda"
                android:title="@string/Priroda" />
            <item
                android:id="@+id/Texnogen"
                android:title="@string/Texnogen" />
            <item
                android:id="@+id/Socium"
                android:title="@string/Socium" />
            <item
                android:id="@+id/OMP"
                android:title="@string/OMP" />

        </menu>
    </item>
    <item android:title="@string/Soxran.zdorovya">
        <menu>
            <item
                android:id="@+id/ZOG"
                android:title="@string/ZOG" />
            <item
                android:id="@+id/Lbez"
                android:title="@string/LBez" />
            <item
                android:id="@+id/Med"
                android:title="@string/Med" />

        </menu>
    </item>

    <item android:title="@string/Proverka">
        <menu>
            <item
                android:id="@+id/Test1"
                android:title="@string/test1" />
            <item
                android:id="@+id/Test2"
                android:title="@string/test2" />
            <item
                android:id="@+id/Test3"
                android:title="@string/test3" />

        </menu>
    </item>

</menu>
